# tcp_closer

./: README.md
examples/: pid_parser.c
src/: CMakeLists.txt  backend_event_loop.c  backend_event_loop.h  tcp_closer.c  tcp_closer.h  tcp_closer_log.h  tcp_closer_netlink.c  tcp_closer_netlink.h  tcp_closer_proc.c  tcp_closer_proc.h
src/debian/: changelog
src/files/: postinst  prerm  tcp-closer.logrotate  tcp-closer.service  tcp_closer.logrotate  tcp_closer.service
